--- a/Pagine/home.html
+++ b/Pagine/home.html
@@ -9,6 +9,10 @@
         <script src="/script.js"></script>
     </head>
     <body>
-        
+        <div class="text-center container-fluid">
+            <img height="450px" src="/IMMAGINI PROVA/logo.jpg" class="rounded m-5" alt="LogoBriscola"> <br>
+            <button type="button" class="btn btn-success btn-lg">GIOCA</button>
+            <button type="button" class="btn btn-dark btn-lg">IMPOSTAZIONI</button>
+        </div>
     </body>
 </html>
