--- a/Pagine/impostazioni.html
+++ b/Pagine/impostazioni.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Casa Pagina</title>
+        <title>Impostazioni</title>
         <link rel="stylesheet" href="/Stile/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="text-center container-fluid">
-            <img height="450px" src="/IMMAGINI PROVA/logo.jpg" class="rounded m-5" alt="LogoBriscola"> <br>
-            <button type="button" class="btn btn-success btn-lg">GIOCA</button>
-            <button type="button" class="btn btn-dark btn-lg">IMPOSTAZIONI</button>
+        <p class="text-center text-white fs-1 p-5">Wow, effetivamente sei passato qui.. Beh.. Suppongo che ti senti solo come noi..</p>
+        <div class="text-center">
+            <img height="690px" class="rounded" src="/IMMAGINI PROVA/programmatore.jpg" onclick="">
         </div>
+        <p class="text-center text-white">Clicca l'immagine</p>
+            
     </body>
 </html>
