Mio Conilio Gioca Pop It

--- a/Pagine/home.html
+++ b/Pagine/home.html
@@ -13,7 +13,7 @@
         <div class="text-center container-fluid">
             <img height="450px" src="/IMMAGINI PROVA/logo.jpg" class="rounded m-5" alt="LogoBriscola"> <br>
             <button type="button" class="btn btn-success btn-lg">GIOCA</button>
-            <button type="button" class="btn btn-dark btn-lg" onclick="">IMPOSTAZIONI</button>
+            <button type="button" class="btn btn-dark btn-lg" onclick="(window.location.href = 'Impostazioni.html')">IMPOSTAZIONI</button>
         </div>
     </body>
 </html>
