--- a/Pagine/schermata-di-gioco.html
+++ b/Pagine/schermata-di-gioco.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BRISCOLA!</title>
 </head>
 <body>
-    CIAO MONDO
+    
 </body>
 </html>
