Immagini importanti fluide (mio Conilio fluido)=

--- a/Pagine/home.html
+++ b/Pagine/home.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="text-center container-fluid">
-            <img height="450px" src="/IMMAGINI PROVA/logo.jpg" class="rounded m-5" alt="LogoBriscola"> <br>
+            <img src="/IMMAGINI PROVA/logo.jpg" class="rounded m-5 img-fluid" alt="LogoBriscola"> <br>
             <button type="button" class="btn btn-success btn-lg">GIOCA</button>
             <button type="button" class="btn btn-dark btn-lg" onclick="(window.location.href = 'Impostazioni.html')">IMPOSTAZIONI</button>
         </div>
