--- a/Pagine/impostazioni.html
+++ b/Pagine/impostazioni.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <p class="text-center text-white fs-1 p-5">Wow, effetivamente sei passato qui.. Beh.. Suppongo che ti senti solo come noi..</p>
-        <div class="text-center">
-            <img height="690px" class="rounded" src="/IMMAGINI PROVA/programmatore.jpg" onclick="">
+        <div class="text-center container-fluid">
+            <img class="rounded img-fluid" src="/IMMAGINI PROVA/programmatore.jpg" onclick="">
         </div>
         <p class="text-center text-white">Clicca l'immagine</p>
             
