--- a/Pagine/home.html
+++ b/Pagine/home.html
@@ -13,7 +13,7 @@
     <body>
         <div class="text-center container-fluid">
             <img src="/IMMAGINI PROVA/logo.jpg" class="rounded m-5 img-fluid" alt="LogoBriscola"> <br>
-            <button type="button" class="btn btn-success btn-lg">GIOCA</button>
+            <button type="button" class="btn btn-success btn-lg" onclick="(window.location.href = 'schermata-di-gioco.html')">GIOCA</button>
             <button type="button" class="btn btn-dark btn-lg" onclick="(window.location.href = 'Impostazioni.html')">IMPOSTAZIONI</button>
         </div>
     </body>
