CREATA LA BASE PER IL GAMEPLAY :FIRE:

--- a/Pagine/schermata-di-gioco.html
+++ b/Pagine/schermata-di-gioco.html
@@ -10,6 +10,14 @@
         <title>Gameplay Briscola</title>
     </head>
     <body>
-        
+        <div class="text-center container-fluid sticky-top p-4">
+            <img class="img-fluid" src="/Immagini/B10.png">
+        </div>
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <img class="img-fluid" src="/Immagini/B10.png">
+        </div>
+        <div class="text-center container-fluid fixed-bottom p-4">
+            <img class="img-fluid" src="/Immagini/B10.png">
+        </div>
     </body>
-</html>
+</html> 
