--- a/Pagine/schermata-di-gioco.html
+++ b/Pagine/schermata-di-gioco.html
@@ -22,9 +22,9 @@
             <img class="img-fluid" id="Tavolo">   <!--Carte in tavola, ha l'ID che viene modificato dal JS-->
         </div>
         <div class="text-center container-fluid fixed-bottom p-4">
-            <img class="img-fluid" id="P1"> <!--Carte tue, ogni IMG ha un'ID che viene modificato dal JS-->
-            <img class="img-fluid" id="P2">
-            <img class="img-fluid" id="P3">
+            <img class="img-fluid" onclick="" id="P1"> <!--Carte tue, ogni IMG ha un'ID che viene modificato dal JS-->
+            <img class="img-fluid" onclick="" id="P2">
+            <img class="img-fluid" onclick="" id="P3">
         </div>
     </body>
 </html> 
