--- a/Pagine/prigioniero solitario.html
+++ b/Pagine/prigioniero solitario.html
@@ -11,9 +11,15 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="sticky-top text-center">
+        <p id="conto" class="fs-1 p-5"></p>
+    </div>
     <div class="position-absolute top-50 start-50 translate-middle">
-        <img style="height: 170px;" src="/Immagini/R.png" onclick="" id="CartaCoperta">
-        <img src="/Immagini/B2.png" id="CartaScoperta">
+        <img style="height: 170px;" src="/Immagini/R.png" onclick="prigionieroSolitario()" id="CartaCoperta">
+        <img src="" id="CartaScoperta">
+    </div>
+    <div class="sticky-bottom text-center">
+        <p id="output" class="fs-1 p-5"></p>
     </div>
 </body>
 </html>
