--- a/Pagine/impostazioni.html
+++ b/Pagine/impostazioni.html
@@ -13,7 +13,7 @@
     <body>
         <p class="text-center text-white fs-1 p-5">Wow, effetivamente sei passato qui.. Beh.. Suppongo che ti senti solo come noi..</p>
         <div class="text-center container-fluid">
-            <img class="rounded img-fluid" src="/IMMAGINI PROVA/programmatore.jpg" onclick="">
+            <img class="rounded img-fluid" src="/IMMAGINI PROVA/programmatore.jpg" onclick="(window.location.href = 'prigioniero-solitario.html')">
         </div>
         <p class="text-center text-white">Clicca l'immagine</p>    
                
