--- a/Pagine/prigioniero-solitario.html
+++ b/Pagine/prigioniero-solitario.html
@@ -18,8 +18,9 @@
         <img style="height: 170px;" src="/Immagini/R.png" onclick="prigionieroSolitario()" id="CartaCoperta">
         <img src="" id="CartaScoperta">
     </div>
-    <div class="sticky-bottom text-center">
+    <div class="fixed-bottom  p-5 text-center">
         <p id="output" class="fs-1 p-5"></p>
+        <button type="button" class="btn btn-danger btn-lg" style="visibility:hidden" onClick="window.location.reload();" id="bottone">Ricarica la pagina!</button>
     </div>
 </body>
 </html>
