--- a/Pagine/prigioniero-solitario.html
+++ b/Pagine/prigioniero-solitario.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Stile/styles.css">
         <link rel="icon" href="/IMMAGINI PROVA/no-vax-foto.jpeg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <script src="/script.js"></script>
+        <script src="/scriptSolitario.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
