--- a/Pagine/schermata-di-gioco.html
+++ b/Pagine/schermata-di-gioco.html
@@ -16,7 +16,8 @@
             <img style="height: 170px;" src="/Immagini/R.png" id="AI3">
         </div>
         <div class="position-absolute top-50 translate-middle">
-            <img style="height: 170px;" src="/Immagini/R.png" id="Mazzo">   <!--Credo si capisca, è semplicemente il mazzo-->
+            <img style="transform: rotate(90deg); position: absolute; padding-right: 100px; padding-bottom: 100px;" id="briscola">
+            <img style="height: 170px; position: relative;" src="/Immagini/R.png" id="Mazzo">   <!--Credo si capisca, è semplicemente il mazzo-->
         </div>
         <div class="position-absolute top-50 start-50 translate-middle">
             <img class="img-fluid" id="Tavolo">   <!--Carte in tavola, ha l'ID che viene modificato dal JS-->
